[gd_scene load_steps=3 format=3 uid="uid://b04wj00c3p8yq"]

[ext_resource type="Script" path="res://minigames/raheem_battle/menu/deck_builder/deck_builder.gd" id="1_tyml5"]
[ext_resource type="PackedScene" uid="uid://dn6ousec2kubc" path="res://minigames/raheem_battle/menu/deck_builder/card_snap/card_snap.tscn" id="4_xpfr8"]

[node name="deck_builder" type="Node2D"]
script = ExtResource("1_tyml5")

[node name="snaps" type="Node2D" parent="."]

[node name="snap_grid" type="GridContainer" parent="."]
offset_left = 790.0
offset_top = 35.0
offset_right = 1278.0
offset_bottom = 691.0
size_flags_horizontal = 0
columns = 3

[node name="card_1" parent="snap_grid" instance=ExtResource("4_xpfr8")]
layout_mode = 2
deck_index = 1

[node name="card_2" parent="snap_grid" instance=ExtResource("4_xpfr8")]
layout_mode = 2
deck_index = 2

[node name="card_3" parent="snap_grid" instance=ExtResource("4_xpfr8")]
layout_mode = 2
deck_index = 3

[node name="card_4" parent="snap_grid" instance=ExtResource("4_xpfr8")]
layout_mode = 2
deck_index = 4

[node name="card_5" parent="snap_grid" instance=ExtResource("4_xpfr8")]
layout_mode = 2
deck_index = 5

[node name="card_6" parent="snap_grid" instance=ExtResource("4_xpfr8")]
layout_mode = 2
deck_index = 6

[node name="card_7" parent="snap_grid" instance=ExtResource("4_xpfr8")]
layout_mode = 2
size_flags_horizontal = 8
deck_index = 7

[node name="card_8" parent="snap_grid" instance=ExtResource("4_xpfr8")]
layout_mode = 2
size_flags_horizontal = 8
deck_index = 8

[node name="grabbed_cards" type="Node2D" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 10.0
offset_top = -14.0
offset_right = 1279.0
offset_bottom = 714.0

[node name="card_container" type="GridContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 17
columns = 3

[node name="save" type="Button" parent="."]
offset_left = 739.0
offset_top = 3.0
offset_right = 768.0
offset_bottom = 34.0
text = "S"

[node name="dark" type="ColorRect" parent="."]
visible = false
offset_left = -357.0
offset_top = -243.0
offset_right = 1684.0
offset_bottom = 1010.0
color = Color(0, 0, 0, 0.396078)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
